src/test/deca/syntax/invalid/created/syntax/no_endString.des
12:12: token recognition error at: '"hello) ;\n}